@@ -1,11 +1,13 @@
 package cwms.cda.api;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import cwms.cda.data.dto.Blob;
 import cwms.cda.formatters.Formats;
 import cwms.cda.formatters.json.JsonV2;
 import fixtures.TestAccounts;
 import io.restassured.filter.log.LogDetail;
+import io.restassured.response.Response;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Tag;
@@ -16,10 +18,16 @@ import org.junit.jupiter.params.provider.EnumSource;
 import javax.servlet.http.HttpServletResponse;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 
 import static io.restassured.RestAssured.given;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.is;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTimeout;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @Tag("integration")
 public class BlobControllerTestIT extends DataApiTestIT {
@@ -29,6 +37,11 @@ public class BlobControllerTestIT extends DataApiTestIT {
     private static final String EXISTING_BLOB_VALUE = "test value";
 
     @BeforeAll
+    public static void setup() throws Exception {
+        createExistingBlob();
+    }
+
+
     static void createExistingBlob() throws Exception
     {
         String origDesc = "test description";
@@ -45,8 +58,8 @@ public class BlobControllerTestIT extends DataApiTestIT {
             .contentType(Formats.JSONV2)
             .body(serializedBlob)
             .header("Authorization",user.toHeaderValue())
-            .queryParam("office",SPK)
-            .queryParam("fail-if-exists",false)
+            .queryParam(Controllers.OFFICE,SPK)
+            .queryParam(Controllers.FAIL_IF_EXISTS,false)
         .when()
             .redirects().follow(true)
             .redirects().max(3)
@@ -60,7 +73,7 @@ public class BlobControllerTestIT extends DataApiTestIT {
     @Test
     void test_getOne_not_found() throws UnsupportedEncodingException {
         String blobId = "TEST";
-        String urlencoded = URLEncoder.encode(blobId, "UTF-8");
+        String urlencoded = URLEncoder.encode(blobId, StandardCharsets.UTF_8);
 
         given()
             .log().ifValidationFails(LogDetail.ALL,true)
@@ -116,17 +129,59 @@ public class BlobControllerTestIT extends DataApiTestIT {
     void test_blob_range()
     {
         // We can now do Range requests!
+        // Our example blob above has a value "test value"
+
+        // If we ask for byte 0 to the _end_ that is like a normal request for the whole file, we should get "test value"
         given()
-            .log().ifValidationFails(LogDetail.ALL,true)
-            .queryParam(Controllers.OFFICE, SPK)
-            .header("Range"," bytes=3-")
-        .when()
-            .get("/blobs/" + EXISTING_BLOB_ID)
-        .then()
+                .log().ifValidationFails(LogDetail.ALL, true)
+                .queryParam(Controllers.OFFICE, SPK)
+                .header("Range", " bytes=0-")
+                .when()
+                .get("/blobs/" + EXISTING_BLOB_ID)
+                .then()
+                .log().ifValidationFails(LogDetail.ALL,true)
+                .assertThat()
+                .statusCode(is(HttpServletResponse.SC_PARTIAL_CONTENT))
+                .body( is(EXISTING_BLOB_VALUE));
+
+        // Our test value is 10 bytes so if we ask for 0-9 we should get the whole value
+        given()
+                .log().ifValidationFails(LogDetail.ALL, true)
+                .queryParam(Controllers.OFFICE, SPK)
+                .header("Range", " bytes=0-9")
+                .when()
+                .get("/blobs/" + EXISTING_BLOB_ID)
+                .then()
+                .log().ifValidationFails(LogDetail.ALL,true)
+                .assertThat()
+                .statusCode(is(HttpServletResponse.SC_PARTIAL_CONTENT))
+                .body( is(EXISTING_BLOB_VALUE));
+
+        // If we ask for byte 3 to the end we should get "t value"
+        given()
+                .log().ifValidationFails(LogDetail.ALL, true)
+                .queryParam(Controllers.OFFICE, SPK)
+                .header("Range", " bytes=3-")
+                .when()
+                .get("/blobs/" + EXISTING_BLOB_ID)
+                .then()
             .log().ifValidationFails(LogDetail.ALL,true)
             .assertThat()
             .statusCode(is(HttpServletResponse.SC_PARTIAL_CONTENT))
             .body( is("t value"));
+
+        // If we ask for byte 3 to 7 we should get "t val"
+        given()
+                .log().ifValidationFails(LogDetail.ALL, true)
+                .queryParam(Controllers.OFFICE, SPK)
+                .header("Range", " bytes=3-7")
+                .when()
+                .get("/blobs/" + EXISTING_BLOB_ID)
+                .then()
+                .log().ifValidationFails(LogDetail.ALL,true)
+                .assertThat()
+                .statusCode(is(HttpServletResponse.SC_PARTIAL_CONTENT))
+                .body( is("t val"));
     }
 
     @Test
@@ -351,6 +406,93 @@ public class BlobControllerTestIT extends DataApiTestIT {
             .statusCode(is(HttpServletResponse.SC_BAD_REQUEST))
             .body("message", containsString("One or more provided values exceeds the maximum length for the parameter."));
     }
+
+
+    @Test
+    void test_pagination_works() {
+        int count = 11;
+        String prefix = "test_blob_pagination_";
+        assertTimeout(Duration.ofMinutes(5), () -> {
+
+            createBlobs(count, prefix);
+
+            final int pageSize = 5;
+            Response initialResponse =
+                    given()
+                            .log()
+                            .ifValidationFails(LogDetail.ALL, true)
+                            .queryParam(Controllers.OFFICE, SPK)
+                            .queryParam(Controllers.PAGE_SIZE, pageSize)
+                            .queryParam(Controllers.LIKE, prefix + ".+")
+                            .when()
+                            .get("/blobs/" )
+                            .then()
+                            .log().ifValidationFails(LogDetail.ALL, true)
+                            .assertThat()
+                            .statusCode(is(HttpServletResponse.SC_OK))
+                            .extract().response();
+
+            String nextPage = initialResponse.path("next-page");
+            assertNotNull(nextPage, "Expected a next page to be returned");
+            int totalRetrieved = initialResponse.path("blobs.size()");
+            assertEquals(pageSize, totalRetrieved, "Expected the first page to return the configured page size");
+
+            do {
+                Response pageN =
+                        given()
+                                .log()
+                                .ifValidationFails(LogDetail.ALL, true)
+                                .queryParam(Controllers.OFFICE, SPK)
+                                .queryParam("page", nextPage)
+                                .when()
+                                .get("/blobs/" )
+                                .then()
+                                .log().ifValidationFails(LogDetail.ALL, true)
+                                .assertThat()
+                                .statusCode(is(HttpServletResponse.SC_OK))
+                                .extract().response();
+
+                nextPage = pageN.path("next-page");
+                int pageTotal = pageN.path("blobs.size()");
+                assertTrue(pageTotal <= pageSize, "Expected the page to return no more than the configured page size. Expected " + pageTotal + "<=" + pageSize);
+
+                totalRetrieved += pageTotal;
+            } while( nextPage != null );
+
+            assertTrue(totalRetrieved > pageSize, "Expected more than one page of blobs");
+            assertEquals(count, totalRetrieved, "Expected to retrieve the blobs we created. ");
+
+
+        }, "Blobs retrieval got stuck; possibly in endless loop");
+    }
+
+    private static void createBlobs(int count, String prefix) throws JsonProcessingException {
+        //
+        TestAccounts.KeyUser user = TestAccounts.KeyUser.SPK_NORMAL;
+        String mediaType = "application/octet-stream";
+        ObjectMapper om = JsonV2.buildObjectMapper();
+        for( int i = 0; i < count; i++ ) {
+            String testValue = "test value " + i ;
+            Blob blob = new Blob(SPK, prefix + i, "test blob number "+i, mediaType, testValue.getBytes() );
+            String serializedBlob = om.writeValueAsString(blob);
+            given()
+                    .log().ifValidationFails(LogDetail.ALL,true)
+                    .contentType(Formats.JSONV2)
+                    .body(serializedBlob)
+                    .header("Authorization",user.toHeaderValue())
+                    .queryParam("office",SPK)
+                    .queryParam("fail-if-exists",false)
+                    .when()
+                    .redirects().follow(true)
+                    .redirects().max(3)
+                    .post("/blobs/")
+                    .then()
+                    .log().ifValidationFails(LogDetail.ALL,true)
+                    .assertThat()
+                    .statusCode(is(HttpServletResponse.SC_CREATED));
+        }
+    }
+
 
     enum GetAllTest
     {
